--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
+    <div id="button" ></div>
     <div class="table"id="y">
        
     </div>
-    <script src="ejercicio.js"></script>
+    <script src="tablero.js"></script>
   </body>
 </html>
