--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <div id="" >
+      <button id="incio" class="boton"></button>
+    </div>
   </head>
   <body>
+    <div></div>
     <div id="button" ></div>
     <div class="table"id="y">
        
