--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div></div>
-    <div id="button" ></div>
+    <div id="b" ></div>
     <div class="table"id="y">
        
     </div>
